# querytool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindFOX.cmake
src/: CMakeLists.txt  Config.cpp  Config.h  QueryTabBook.cpp  QueryTabBook.h  QueryTabItem.cpp  QueryTabItem.h  QueryTool.cpp  QueryTool.h  Server.h  ServerEditDlg.cpp  ServerEditDlg.h  ServerTreeList.cpp  ServerTreeList.h  SqlConnection.cpp  SqlConnection.h  main.cpp
src/tds/: CMakeLists.txt  README.md
src/tds/include/: tds_sysdep_public.h
src/tds/include/freetds/: checks.h  configs.h  convert.h  data.h  iconv.h  macros.h  proto.h  replacements.h  stream.h  sysdep_private.h  tds.h  thread.h  tls.h  utils.h  version.h
src/tds/include/freetds/utils/: des.h  hmac_md5.h  md4.h  md5.h  string.h
src/tds/src/: CMakeLists.txt  challenge.c  charset_lookup.h  config.c  config.cpp  convert.c  data.c  des.c  encodings.h  getmac.c  getmac.cpp  gssapi.c  hmac_md5.c  iconv.c  locale.c  log.c  login.c  login.cpp  md4.c  md5.c  mem.c  net.c  net.cpp  numeric.c  packet.c  packet.cpp  query.c  random.c  read.c  sec_negotiate.c  strlcpy.c  tdsstring.c  threadsafe.c  tls.c  token.c  util.c  write.c
